Dynamic_programming/compiling_error.txt
/home/pikachu/Algorithms/Dynamic_programming/Longest_increasing_subsequence.cpp: In function ‘int LIS(int, int)’:
/home/pikachu/Algorithms/Dynamic_programming/Longest_increasing_subsequence.cpp:23:23: error: invalid types ‘int[int]’ for array subscript
             if ( arr[i] > arr[j] && lis[i] < lis[j] + 1)
                       ^
/home/pikachu/Algorithms/Dynamic_programming/Longest_increasing_subsequence.cpp:23:32: error: invalid types ‘int[int]’ for array subscript
             if ( arr[i] > arr[j] && lis[i] < lis[j] + 1)
                                ^
/home/pikachu/Algorithms/Dynamic_programming/Longest_increasing_subsequence.cpp: In function ‘int main()’:
/home/pikachu/Algorithms/Dynamic_programming/Longest_increasing_subsequence.cpp:40:18: error: invalid conversion from ‘int*’ to ‘int’ [-fpermissive]
   x = LIS(array,n);
                  ^
/home/pikachu/Algorithms/Dynamic_programming/Longest_increasing_subsequence.cpp:11:5: note:   initializing argument 1 of ‘int LIS(int, int)’
 int LIS( int arr, int n )
     ^
